--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body class="bg-grey-lightest">
+  <div class="flex flex-wrap w-full p-6 mb-8 bg-black">
+    <div class="container mx-auto">
+      <h1 class="text-white text-xl">
+        References Project
+      </h1>
+    </div>
+  </div>
+
   <div class="container mx-auto">
-    <div class="flex h-screen items-center">
-        <div class="flex items-center justify-center w-1/3 h-12 bg-grey hover:bg-white">
-          <p class="text-white hover:text-black">teste</p>
+    <div class="flex flex-wrap">
+      <div class="w-1/4">
+        <div class="mb- flex flex-wrap mb-6">
+            <label for="search" class="w-full mb-1 text-base font-normal text-blue">Search</label>
+            <input id="search" type="text" placeholder="Search anything..."
+                   class="w-full search mb-2"
+            />
+            <button class="w-full btn btn-dark-blue">
+              <i class="fa fa-search" aria-hidden="true"></i>
+              Search
+            </button>
         </div>
-        <div class="flex items-center justify-center w-2/3 h-12 bg-red hover:bg-white">
-          <p class="text-white hover:text-black">teste</p>
+
+        <h3 class="mb-2 font-normal text-base text-blue">Recents Tree</h3>
+        <ul class="list-reset m-px border rounded">
+          <li class="hover:bg-grey-lighter">
+            <a href="#" class="p-4 block text-black font-light no-underline hover:text-blue-dark">
+              Promises Javascript
+              <i class="fa fa-external-link float-right" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="hover:bg-grey-lighter">
+            <a href="#" class="p-4 block text-black font-light no-underline hover:text-blue-dark">
+              Lógica para jogos digitais
+              <i class="fa fa-external-link float-right" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="hover:bg-grey-lighter">
+            <a href="#" class="p-4 block text-black font-light no-underline hover:text-blue-dark">
+              Desgin Pattern PHP 7
+              <i class="fa fa-external-link float-right" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="hover:bg-grey-lighter">
+            <a href="#" class="p-4 block text-black font-light no-underline hover:text-blue-dark">
+              TDD com React Native
+              <i class="fa fa-external-link float-right" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+
+      </div>
+      <div class="w-3/4 pl-8">
+        <div class="">
+            <h2 class="mb-3 text-4xl font-light text-blue-dark">Promises em Javascript</h2>
+            <p class="text-grey-dark mb-6">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+            </p>
+
+            <h3 class="mb-3 text-md font-normal">Links</h3>
         </div>
+      </div>
     </div>
   </div>
   <script src="./build.js"></script>
