Create list of links inside content Add search input to link references

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>References Project</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   <link rel="stylesheet" href="./styles.css">
 </head>
@@ -62,12 +62,55 @@
       </div>
       <div class="w-3/4 pl-8">
         <div class="">
-            <h2 class="mb-3 text-4xl font-light text-blue-dark">Promises em Javascript</h2>
-            <p class="text-grey-dark mb-6">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
-            </p>
+          <h2 class="mb-3 text-4xl font-light text-blue-dark">Promises em Javascript</h2>
+          <p class="text-grey-dark font-light mb-8">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+          </p>
 
-            <h3 class="mb-3 text-md font-normal">Links</h3>
+          <div class="mb-4 flex justify-between items-center">
+            <h3 class="text-xl font-normal">
+              References<br/>
+              <span class="text-xs">2 links of references</span>
+            </h3>
+            <input class="search" placeholder="Search a specific link" type="text">
+          </div>
+
+
+          <div class=" -mt-px flex items-center border-b border-l border-r border-t p-4 bg-grey-lighter hover:border-l-4">
+            <div class="w-5/6">
+              <h3 class="mb-1 font-light">Medium Post about Javascript - <span class="font-light text-blue-dark">by Eliott</span></h3>
+              <p class="mb-4 text-grey-dark font-light text-sm">10/03/2017</p>
+              <p class="mb-3 text-grey-dark font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <a href="#" class="no-underline">
+                <i class="fa fa-link" aria-hidden="true"></i>
+                https://medium.freecodecamp.org/simple-react-testing-d9e25ec87e2
+              </a>
+            </div>
+            <div class="w-1/6 text-center class="no-underline"">
+              <a href="#" class="no-underline text-black hover:text-blue">
+                  <i class="fa fa-share block" aria-hidden="true"></i>
+                  Go!
+                </a>
+            </div>
+          </div>
+
+          <div class=" -mt-px flex items-center border-b border-l border-r border-t p-4 bg-grey-lighter hover:border-l-4">
+              <div class="w-5/6">
+                <h3 class="mb-1 font-light">Medium Post about Javascript - <span class="font-light text-blue-dark">by Eliott</span></h3>
+                <p class="mb-4 text-grey-dark font-light text-sm">10/03/2017</p>
+                <p class="mb-3 text-grey-dark font-normal">Lorem Ipsum is dummy simply of the printing and typesetting Ipsum printing.</p>
+                <a href="#" class="no-underline">
+                  <i class="fa fa-link" aria-hidden="true"></i>
+                  https://medium.freecodecamp.org/simple-react-testing-d9e25ec87e2
+                </a>
+              </div>
+              <div class="w-1/6 text-center">
+                <a href="#" class="no-underline text-black hover:text-blue">
+                  <i class="fa fa-share block" aria-hidden="true"></i>
+                  Go!
+                </a>
+              </div>
+            </div>
         </div>
       </div>
     </div>
