Create markup to new reference link

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         References Project
       </h1>
       <div class="w-3/4 text-right">
-        <button class="rounded py-2 px-3 bg-green hover:bg-green-dark text-white text-sm">Create a New Study Tree </button>
+        <button class="rounded py-2 px-3 btn btn-green">Create a New Study Tree </button>
       </div>
     </div>
   </div>
@@ -83,7 +83,6 @@
             <div class="w-5/6">
               <h3 class="mb-1 font-light">Medium Post about Javascript - <span class="font-light text-blue-dark">by Eliott</span></h3>
               <p class="mb-4 text-grey-dark font-light text-sm">10/03/2017</p>
-              <p class="mb-3 text-grey-dark font-normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               <a href="#" class="no-underline">
                 <i class="fa fa-link" aria-hidden="true"></i>
                 https://medium.freecodecamp.org/simple-react-testing-d9e25ec87e2
@@ -101,19 +100,43 @@
               <div class="w-5/6">
                 <h3 class="mb-1 font-light">Medium Post about Javascript - <span class="font-light text-blue-dark">by Eliott</span></h3>
                 <p class="mb-4 text-grey-dark font-light text-sm">10/03/2017</p>
-                <p class="mb-3 text-grey-dark font-normal">Lorem Ipsum is dummy simply of the printing and typesetting Ipsum printing.</p>
                 <a href="#" class="no-underline">
                   <i class="fa fa-link" aria-hidden="true"></i>
                   https://medium.freecodecamp.org/simple-react-testing-d9e25ec87e2
                 </a>
               </div>
-              <div class="w-1/6 text-center">
+              <div class="w-1/6 text-center class="no-underline"">
                 <a href="#" class="no-underline text-black hover:text-blue">
-                  <i class="fa fa-share block" aria-hidden="true"></i>
-                  Go!
-                </a>
+                    <i class="fa fa-share block" aria-hidden="true"></i>
+                    Go!
+                  </a>
               </div>
             </div>
+
+          <div class=" -mt-px flex flex-wrap items-center border-b border-l border-r border-t p-4 bg-grey-lighter">
+            <a href="#" class="w-full no-underline">
+              <h3 class="flex justify-between items-center w-full font-light mb-4 font-light text-blue">
+                Add new link
+              </h3>
+            </a>
+            <div class="w-full py-1">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Title">
+            </div>
+            <div class="w-full py-1">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Author">
+            </div>
+            <div class="w-full py-1">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Date">
+            </div>
+            <div class="w-full py-1">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Link">
+            </div>
+
+            <div class="w-full text-right mt-2">
+                <button class="rounded py-2 px-3 btn bg-red-light hover:bg-red text-white">cancel</button>
+                <button class="rounded py-2 px-3 btn btn-green">Create a New Study Tree</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
