--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,33 @@
       </div>
       <div class="w-3/4 pl-8">
         <div class="">
+          <h2 class="mb-3 text-4xl font-light text-blue-dark">New Study Tree</h2>
+          <p class="text-grey-dark font-light mb-8">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+          </p>
+
+          <div class="bg-grey-lighter p-4 shadow-md border">
+            <div class="w-full">
+              <label for="title">
+                Your Title
+                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
+              </label>
+              <input id="title" type="text" class="w-full py-2 px-2 mt-2 mb-4 border rounded bg-white" placeholder="type your title of study tree...">
+            </div>
+            <div class="w-full">
+              <label for="description">
+                Your Description
+                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
+              </label>
+              <textarea class="w-full mt-2 border rounded p-2" id="description" rows="10" placeholder="What is goal of this Study Tree"></textarea>
+            </div>
+            <div class="w-full text-right mt-2">
+              <button class="rounded py-2 px-3 btn bg-red-light hover:bg-red text-white">cancel</button>
+              <button class="rounded py-2 px-3 btn btn-green">Create Study Tree</button>
+            </div>
+          </div>
+        </div>
+        <div class="hidden">
           <h2 class="mb-3 text-4xl font-light text-blue-dark">Promises em Javascript</h2>
           <p class="text-grey-dark font-light mb-8">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
@@ -78,8 +105,7 @@
             <input class="search" placeholder="Search a specific link" type="text">
           </div>
 
-
-          <div class=" -mt-px flex items-center border-b border-l border-r border-t p-4 bg-grey-lighter hover:border-l-4">
+          <div class="-mt-px flex items-center border-b border-l border-r border-t p-4 bg-grey-lighter hover:border-l-4">
             <div class="w-5/6">
               <h3 class="mb-1 font-light">Medium Post about Javascript - <span class="font-light text-blue-dark">by Eliott</span></h3>
               <p class="mb-4 text-grey-dark font-light text-sm">10/03/2017</p>
@@ -113,28 +139,42 @@
               </div>
             </div>
 
-          <div class=" -mt-px flex flex-wrap items-center border-b border-l border-r border-t p-4 bg-grey-lighter">
+          <div class="-mt-px flex flex-wrap items-center border-b border-l border-r border-t p-4 bg-grey-lighter">
             <a href="#" class="w-full no-underline">
               <h3 class="flex justify-between items-center w-full font-light mb-4 font-light text-blue">
                 Add new link
               </h3>
             </a>
             <div class="w-full py-1">
+              <label for="title">
+                Your title
+                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
+              </label>
               <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Title">
             </div>
             <div class="w-full py-1">
+              <label for="title">
+                Author of post
+              </label>
               <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Author">
             </div>
             <div class="w-full py-1">
+              <label for="title">
+                Date of post
+              </label>
               <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Date">
             </div>
             <div class="w-full py-1">
+              <label for="title">
+                Link of post
+                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
+              </label>
               <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Link">
             </div>
 
             <div class="w-full text-right mt-2">
-                <button class="rounded py-2 px-3 btn bg-red-light hover:bg-red text-white">cancel</button>
-                <button class="rounded py-2 px-3 btn btn-green">Create a New Study Tree</button>
+              <button class="rounded py-2 px-3 btn bg-red-light hover:bg-red text-white">cancel</button>
+              <button class="rounded py-2 px-3 btn btn-green">Create a New Study Tree</button>
             </div>
           </div>
         </div>
