Add upload file to new Study tree

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,14 @@
               <input id="title" type="text" class="w-full py-2 px-2 mt-2 mb-4 border rounded bg-white" placeholder="type your title of study tree...">
             </div>
             <div class="w-full">
+              <label for="title">
+                Your Cover Image
+              </label>
+              <input type="file" class="w-full py-2 px-2 mt-2 mb-4 border rounded bg-white" id="">
+            </div>
+            <div class="w-full">
               <label for="description">
                 Your Description
-                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
               </label>
               <textarea class="w-full mt-2 border rounded p-2" id="description" rows="10" placeholder="What is goal of this Study Tree"></textarea>
             </div>
