Create list component

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         References Project
       </h1>
       <div class="w-3/4 text-right">
-        <button class="rounded py-2 px-3 btn btn-green">Create a New Study Tree </button>
+        <a href="#" class="rounded py-2 px-3 btn btn-green no-underline">Create a New Study Tree </a>
       </div>
     </div>
   </div>
@@ -64,7 +64,71 @@
 
       </div>
       <div class="w-3/4 pl-8">
-        <div class="">
+
+        <div class="hidden">
+          <h2 class="mb-3 text-4xl font-light text-blue-dark">The last Study Tree</h2>
+          <a href="" class="no-underline">
+            <div class="w-full lg:flex mb-4 hover:shadow-md">
+              <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://tailwindcss.com/img/card-left.jpg')" title="Woman holding a mug">
+              </div>
+              <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                <div class="mb-8">
+                  <div class="text-black font-bold text-xl mb-2">Can coffee make you a better developer?</div>
+                  <p class="text-grey-darker text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                </div>
+                <div class="flex items-center">
+                  <img class="w-10 h-10 rounded-full mr-4" src="https://pbs.twimg.com/profile_images/885868801232961537/b1F6H4KC_400x400.jpg" alt="Avatar of Jonathan Reinink">
+                  <div class="text-sm">
+                    <p class="text-black leading-none">Jonathan Reinink</p>
+                    <p class="text-grey-dark">Aug 18</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+          <a href="" class="no-underline">
+              <div class="w-full lg:flex mb-4 hover:shadow-md">
+                <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://tailwindcss.com/img/card-left.jpg')" title="Woman holding a mug">
+                </div>
+                <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                  <div class="mb-8">
+                    <div class="text-black font-bold text-xl mb-2">Can coffee make you a better developer?</div>
+                    <p class="text-grey-darker text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                  </div>
+                  <div class="flex items-center">
+                    <img class="w-10 h-10 rounded-full mr-4" src="https://pbs.twimg.com/profile_images/885868801232961537/b1F6H4KC_400x400.jpg" alt="Avatar of Jonathan Reinink">
+                    <div class="text-sm">
+                      <p class="text-black leading-none">Jonathan Reinink</p>
+                      <p class="text-grey-dark">Aug 18</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+
+            <a href="" class="no-underline">
+                <div class="w-full lg:flex mb-4 hover:shadow-md">
+                  <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://tailwindcss.com/img/card-left.jpg')" title="Woman holding a mug">
+                  </div>
+                  <div class="border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal">
+                    <div class="mb-8">
+                      <div class="text-black font-bold text-xl mb-2">Can coffee make you a better developer?</div>
+                      <p class="text-grey-darker text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+                    </div>
+                    <div class="flex items-center">
+                      <img class="w-10 h-10 rounded-full mr-4" src="https://pbs.twimg.com/profile_images/885868801232961537/b1F6H4KC_400x400.jpg" alt="Avatar of Jonathan Reinink">
+                      <div class="text-sm">
+                        <p class="text-black leading-none">Jonathan Reinink</p>
+                        <p class="text-grey-dark">Aug 18</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+        </div>
+
+        <div class="hidden">
           <h2 class="mb-3 text-4xl font-light text-blue-dark">New Study Tree</h2>
           <p class="text-grey-dark font-light mb-8">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
@@ -96,10 +160,11 @@
             </div>
           </div>
         </div>
-        <div class="hidden">
+        <div class="">
           <h2 class="mb-3 text-4xl font-light text-blue-dark">Promises em Javascript</h2>
+          <img src="https://st2.cannypic.com/thumbs/37/376591_632_canny_pic.jpg" alt="Title" class="mb-6" width="100%">
           <p class="text-grey-dark font-light mb-8">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
           </p>
 
           <div class="mb-4 flex justify-between items-center">
@@ -155,26 +220,26 @@
                 Your title
                 <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
               </label>
-              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Title">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="What this link teach me...">
             </div>
+            <div class="w-full py-1">
+                <label for="title">
+                  Link of post
+                  <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
+                </label>
+                <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="https://awesome-link.com">
+              </div>
             <div class="w-full py-1">
               <label for="title">
                 Author of post
               </label>
-              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Author">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Optional">
             </div>
             <div class="w-full py-1">
               <label for="title">
                 Date of post
               </label>
-              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Date">
-            </div>
-            <div class="w-full py-1">
-              <label for="title">
-                Link of post
-                <i class="fa fa-circle text-xs text-red-lighter" title="Required" aria-hidden="true"></i>
-              </label>
-              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Link">
+              <input type="text" class="w-full mb-1 mr-1 py-2 px-2 border rounded" placeholder="Optional">
             </div>
 
             <div class="w-full text-right mt-2">
@@ -185,6 +250,11 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="container mx-auto mt-8">
+    <p class="text-center text-sm text-blue-dark border-t py-4">
+        References Project · Created by <a class="no-underline" href="https://github.com/ralfting" target="_blank">Ralph Effting</a>
+    </p>
   </div>
   <script src="./build.js"></script>
 </body>
