Create topBar and BaseLink components Add TypeProps

--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body class="bg-grey-lightest">
-  <div class="flex flex-wrap w-full p-6 mb-8 bg-black">
-    <div class="container mx-auto flex items-center">
-      <h1 class="w-1/4 text-white text-xl">
-        References Project
-      </h1>
-      <div class="w-3/4 text-right">
-        <a href="#" class="rounded py-2 px-3 btn btn-green no-underline">Create a New Study Tree </a>
-      </div>
-    </div>
-  </div>
+  <div id="root"></div>
 
   <div class="container mx-auto">
     <div class="flex flex-wrap">
